# sample-a2ui

./: .gitignore
agent/: pyproject.toml
agent/app/: agent.py  server.py  state.py  tools.py
docs/: 01-what-is-a2ui.md  02-protocol.md  03-components.md  04-agent-backend.md  05-react-frontend.md  06-action-lifecycle.md  README.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  app.ts
